another x-overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -294,6 +294,8 @@ html {
 html,
 body {
   max-width: 100vw;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 body {
